# redpanda

./: MODULE.bazel
.github/workflows/: build.yml
bazel/: repositories.bzl
src/v/bytes/: iobuf.cc  iobuf.h
src/v/bytes/details/: io_byte_iterator.h  io_fragment.h
src/v/bytes/tests/: BUILD  iobuf_fragment_list_test.cc
src/v/cloud_storage_clients/: s3_error.cc
src/v/cluster/: cluster_recovery_reconciler.cc  cluster_recovery_reconciler.h  topics_frontend.cc
src/v/config/: base_property.h  configuration.cc  configuration.h  node_config.h
src/v/crash_tracker/: recorder.cc  recorder.h  types.h
src/v/crash_tracker/tests/: BUILD  CMakeLists.txt  limiter_test.cc  recorder_test.cc  report_generator.cc
src/v/datalake/: BUILD  CMakeLists.txt  backlog_controller.cc  backlog_controller.h  datalake_manager.cc  datalake_manager.h  values_parquet.cc
src/v/datalake/tests/: datalake_parquet_tests.cc
src/v/datalake/translation/: BUILD  partition_translator.cc  partition_translator.h  scheduling.cc  scheduling_policies.cc  (+1 more)
src/v/features/: enterprise_features.h
src/v/iceberg/: BUILD  CMakeLists.txt  remove_snapshots_action.cc
src/v/io/: interval_map.h
src/v/redpanda/: application.cc
src/v/storage/: disk_log_impl.cc
tests/: setup.py
tests/docker/: Dockerfile
tests/rptest/remote_scripts/: compute_storage.py
tests/rptest/services/: apache_iceberg_catalog.py  catalog_service.py  client_swarm_base.py  consumer_swarm.py  nessie_catalog.py  producer_swarm.py  spark_service.py  trino_service.py  utils.py
tests/rptest/tests/: license_enforcement_test.py
(+49 files in other folders)
